--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea606c">  <td>23/12/27 17:41:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestClass.Setup()[pri:0, instance:TestLayer.TestClass@6392827e]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="ea606c">  <td>23/12/27 17:41:59</td>   <td>17456</td> <td>&nbsp;</td><td title="&lt;&lt;TestClass.TearDown()[pri:0, instance:TestLayer.TestClass@6392827e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
-<tr bgcolor="ea606c">  <td>23/12/27 17:41:56</td>   <td>13816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.validateLoginPageFunction()[pri:0, instance:TestLayer.TestClass@6392827e]">validateLoginPageFunction</td> 
-  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="bb9485">  <td>24/01/13 16:49:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestClass.Setup()[pri:0, instance:TestLayer.TestClass@1de5f259]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="bb9485">  <td>24/01/13 16:50:05</td>   <td>23133</td> <td>&nbsp;</td><td title="&lt;&lt;TestClass.TearDown()[pri:0, instance:TestLayer.TestClass@1de5f259]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1150963491</td>   <td></td> </tr>
+<tr bgcolor="bb9485">  <td>24/01/13 16:50:01</td>   <td>18426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.validateLoginPageFunction()[pri:0, instance:TestLayer.TestClass@1de5f259]">validateLoginPageFunction</td> 
+  <td>main@1150963491</td>   <td></td> </tr>
 </table>
